# mia-api

./: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  main.py  pyproject.toml
docs/: guide_stream_writer.md  mbras_gpt_benchmark.md  smart_agent_system.md  token_consumption_logging.md  validation_retry_improvements.md
examples/: agent_descriptions_demo.py  email_template_examples.py  enhanced_general_agent.py  enhanced_system_prompt_demo.py  migration_comparison.py  partner_handoff_example.py  smart_agent_graphs.py  token_logging_example.py
implementations/: EMAIL_TEMPLATES_IMPLEMENTATION.md  FALSE_PROMISES_FIX_SOLUTION.md  IMPLEMENTATION_SUMMARY.md  MULTI_AGENT_LOOP_PREVENTION_SOLUTION.md  VALIDATION_RETRY_CHANGES.md
src/application/: __init__.py
src/core/: __init__.py
src/core/entities/: __init__.py  address.py  company.py  customer.py  email.py  iptu.py  phone.py  photo.py  property.py  pydantic.py  society.py
src/core/enums/: __init__.py  details.py  property_type.py
src/infrastructure/: __init__.py
src/infrastructure/ai/: __init__.py
src/infrastructure/config/: __init__.py  database.py  meilisearch.py
src/infrastructure/lib/: __init__.py  download_file.py  email.py  logger.py  verify_json_existance.py
src/infrastructure/models/: __init__.py  company.py  customer.py  files.py  general_data.py  public.py  relationship.py  view.py
src/infrastructure/templates/: README.md  __init__.py  email_template_engine.py
src/presentation/: __init__.py
tests/: test_runtime.py  test_validation_retry.py
(+56 files in other folders)
